# opengl_app

./: .gitignore  Cargo.toml  README.md
rsc/shader/: shader.fs  shader.vs
src/: main.rs  shader.rs  vertex.rs
